positional_derive/tests/ui/enums-with-wrong-matcher.rs
use positional_derive::FromPositionalRow;

#[derive(FromPositionalRow)]
enum MyData {
    #[matcher(struct)]
    Row1(String),
}

fn main() {}
